@@ -2936,6 +2936,7 @@ extern int          numlock_mask;
 extern int          scrollock_mask;
 extern int          mask_mod_combos[8];
 extern Group       *current_group;
+extern char        *dstr;
 
 /* This turns on E's internal stack tracking system for coarse debugging */
 /* and being able to trace E for profiling/optimisation purposes (which */
