@@ -1280,10 +1280,13 @@ AdoptInternal(Window win, Border * border, int type, void *ptr)
  * else if (type == 2)
  * MatchEwinToSnapInfoIconbox(ewin, (Iconbox *)ptr);
  * else  */
-   b = MatchEwinByFunction(ewin, (void *(*)(EWin *, WindowMatch *))
-			   MatchEwinBorder);
-   if (b)
-      ewin->border = b;
+   if (!border)
+     {
+	b = MatchEwinByFunction(ewin, (void *(*)(EWin *, WindowMatch *))
+				MatchEwinBorder);
+	if (b)
+	   ewin->border = b;
+     }
    MatchEwinToSnapInfo(ewin);
    if (!ewin->border)
      {
